<resources>
    <string name="accept">Accept</string>
    <string name="add">Add</string>
    <string name="add_contact">Add contact</string>
    <string name="add_contact_message_default">Talk to me on aTox like a reasonable human being.</string>
    <string name="add_contact_message_error_empty">Write something to send first</string>
    <string name="app_name" translatable="false">aTox</string>
    <string name="confirm">Confirm</string>
    <string name="connecting">Connecting…</string>
    <string name="contact_typing">Typing…</string>
    <string name="copied">Copied</string>
    <string name="copy_atox">Copy</string>
    <string name="create">Create</string>
    <string name="create_a_tox_profile">Create a Tox profile</string>
    <string name="delete_contact">Delete contact</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="messages_incoming">Incoming messages</string>
    <string name="name">Name</string>
    <string name="name_default">aTox user</string>
    <string name="no_contacts_call_to_action">What are you waiting for? Add a contact to get started!</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="profile_photo_description">Profile photo</string>
    <string name="reject">Reject</string>
    <string name="send">Send</string>
    <string name="sending">Sending…</string>
    <string name="settings">Settings</string>
    <string name="status_indicator">Status indicator</string>
    <string name="status_message">Status message</string>
    <string name="status_message_default">Brought to you live, by aTox</string>
    <string name="tox_id">Tox ID</string>
    <string name="tox_id_error_length">Tox ID must be 76 characters (%1$d/76)</string>
    <string name="tox_id_error_checksum">Invalid checksum</string>
    <string name="tox_id_error_hex">Only hex allowed</string>
    <string name="tox_id_share">Share Tox ID</string>
    <string name="update">Update</string>
    <string name="quit">Quit</string>
    <string name="quit_confirm">Are you sure you wish to quit?</string>
    <string name="call_confirm">Are you sure you wish to call?</string>
    <string name="friend_requests">Friend requests</string>
    <string name="friend_request_from">Friend request from %1$s</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_history_cleared">History cleared</string>
    <string name="clear_history_confirm">Are you sure you want to clear your chat history with %1$s?</string>
    <string name="delete_message_confirm">Are you sure you want to delete the message \"%1$s\"?</string>
    <string name="import_tox_save">Import</string>
    <string name="import_tox_save_failed">Import failed: %1$s</string>
    <string name="export_tox_save">Export Tox save</string>
    <string name="tox_save_exported">Tox save exported</string>
    <string name="never">Never</string>
    <string name="info">Info</string>
    <string name="atox_offline">Offline</string>
    <string name="atox_connected_with_tcp">Connected (TCP)</string>
    <string name="atox_connected_with_udp">Connected (UDP)</string>
    <string name="read_qr">QR</string>
    <string name="pref_heading_theme">Theme</string>
    <string name="pref_theme_follow_system">Follow system</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string-array name="pref_theme_options">
        <item>@string/pref_theme_follow_system</item>
        <item>@string/pref_theme_light</item>
        <item>@string/pref_theme_dark</item>
    </string-array>
    <string name="pref_heading_ft_auto_accept">Auto-accept file transfers</string>
    <string name="pref_ft_auto_accept_none">None</string>
    <string name="pref_ft_auto_accept_images">Images</string>
    <string name="pref_ft_auto_accept_all">All</string>
    <string-array name="pref_ft_auto_accept_options">
        <item>@string/pref_ft_auto_accept_none</item>
        <item>@string/pref_ft_auto_accept_images</item>
        <item>@string/pref_ft_auto_accept_all</item>
    </string-array>
    <string name="pref_heading_type">Type</string>
    <string name="pref_proxy_type_none">None</string>
    <string name="pref_proxy_type_http">HTTP</string>
    <string name="pref_proxy_type_socks5">SOCKS5</string>
    <string-array name="pref_proxy_type_options">
        <item>@string/pref_proxy_type_none</item>
        <item>@string/pref_proxy_type_http</item>
        <item>@string/pref_proxy_type_socks5</item>
    </string-array>
    <string name="pref_heading_advanced">Advanced</string>
    <string name="pref_heading_bootstrap_nodes">Bootstrap node source</string>
    <string name="pref_bootstrap_node_builtin">Built-in</string>
    <string name="pref_bootstrap_node_user_provided">User-provided</string>
    <string-array name="pref_bootstrap_node_options">
        <item>@string/pref_bootstrap_node_builtin</item>
        <item>@string/pref_bootstrap_node_user_provided</item>
    </string-array>
    <string name="pref_bootstrap_nodes_description">User-provided JSON files must have the same format as on https://nodes.tox.chat/json</string>
    <string name="version_display" translatable="false">aTox v%1$s — %2$d</string>
    <string name="send_as_action">Send as action</string>
    <string name="or_import_existing_save">or import an existing Tox save</string>
    <string name="profile_information">Profile information</string>
    <string name="profile_settings">Profile settings</string>
    <string name="profile_nickname">Change your nickname</string>
    <string name="profile_status_message">Change your status message</string>
    <string name="profile_status">Change your status</string>
    <string name="profile">Profile</string>
    <string name="tox_id_error_already_exists">A contact with that Tox ID already exists</string>
    <string name="tox_service_running">aTox is running…</string>
    <string name="pref_heading_network">Network</string>
    <string name="pref_udp_enabled">UDP enabled</string>
    <string name="pref_heading_general">General</string>
    <string name="pref_run_at_startup">Run at boot</string>
    <string name="pref_confirm_quitting">Confirm app quit</string>
    <string name="pref_confirm_calling">Confirm call</string>
    <string name="friend_request">Friend request</string>
    <string name="status_available">Available</string>
    <string name="status_away">Away</string>
    <string name="status_busy">Busy</string>
    <string-array name="user_statuses">
        <item>@string/status_available</item>
        <item>@string/status_away</item>
        <item>@string/status_busy</item>
    </string-array>
    <string name="from">From</string>
    <string name="status_dialog_edit_user_status">Edit your status</string>
    <string name="mimetype_handler_not_found">There are no apps installed to handle the \"%1$s\" media type</string>
    <string name="attach_file">Attach file</string>
    <string name="delete">Delete</string>
    <string name="notification_file_transfer">Incoming file transfer \"%1$s\"</string>
    <string name="cancelled">Cancelled</string>
    <string name="completed">Completed</string>
    <string name="save_as">Save as…</string>
    <string name="export_file_success">File exported</string>
    <string name="export_file_failure">Something went wrong exporting that. Pre-0.5.1 transfers were exported by default.</string>
    <string name="draft_message">Draft: %1$s</string>
    <string name="pref_heading_address">Address</string>
    <string name="pref_heading_port">Port</string>
    <string name="pref_heading_proxy">Proxy</string>
    <string name="warn_proxy_broken">Set up your proxy correctly (or turn it off) before using the app</string>
    <string name="proxy_not_found">Proxy not found</string>
    <string name="bad_type">Bad type</string>
    <string name="bad_host">Bad host</string>
    <string name="bad_port">Bad port</string>
    <string name="tox_save_export_failure">Could not export Tox save: %1$s</string>
    <string name="reply">Reply</string>
    <string name="pref_auto_away">Auto away</string>
    <string name="seconds">Seconds</string>
    <string name="bad_positive_number">Must be a positive number</string>
    <string name="warn_node_json_import_failed">Error importing nodes</string>
    <string name="error_no_nodes_loaded">Unable to load bootstrap nodes, please switch to built-in nodes or import nodes again</string>
    <string name="receive_share_share_to">Share to…</string>
    <string name="contact_list_delete_contact_confirm">Really delete \"%1$s\" from contacts?</string>
    <string name="call">Call</string>
    <string name="microphone_control">Microphone control</string>
    <string name="error_simultaneous_calls">Participating in multiple calls at the same time is not supported</string>
    <string name="end_call">End call</string>
    <string name="calls">Calls</string>
    <string name="ongoing_call">Ongoing call</string>
    <string name="in_call_with">In call with %1$s</string>
    <string name="tox_id_error_self_add">You can\'t add yourself</string>
    <string name="save">Save</string>
    <string name="pref_nospam">NoSpam</string>
    <string name="pref_nospam_description">Changing your NoSpam alters your Tox ID, meaning friend requests must be sent to the updated one</string>
    <string name="pref_disabled_tox_error">Disabled due to an error starting Tox</string>
    <string name="saved">Saved</string>
    <string name="delete_message">Delete message</string>
    <string name="contact_default_name">Unknown</string>
    <string name="incoming_call">Incoming call</string>
    <string name="incoming_call_from">Incoming call from %1$s</string>
    <string name="call_mic_permission_needed">Microphone permission required to enable sending audio</string>
    <string name="password">Password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="unlock_profile">Unlock profile</string>
    <string name="pref_heading_change_password">Change password</string>
    <string name="pref_current_password">Current password</string>
    <string name="pref_new_password">New password</string>
    <string name="pref_confirm_password">Confirm new password</string>
    <string name="password_updated">Password updated</string>
    <string name="passwords_must_match">The passwords must match</string>
    <string name="pref_block_screenshots">Block screenshots of aTox</string>
    <string name="pref_block_screenshots_description">This **only** blocks screenshots on **your** device, and provides no protection against your contacts taking screenshots or otherwise saving your conversations</string>
    <string name="return_to_chat">Return to chat</string>
    <string name="speakerphone_toggle">Toggle speakerphone</string>
    <string name="channel_profile_locked_explanation">Sent when your profile needs to be unlocked for aTox to run</string>
    <string name="atox_profile_locked">aTox profile locked</string>
    <string name="tap_to_unlock_and_start_atox">Tap to unlock your profile and start aTox</string>
    <string name="share">Share</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="file_not_found">File not found</string>
    <string name="export_history">Export history</string>
    <string name="export_history_success">Message history exported</string>
    <string name="export_history_failure">Message history export failed: %1$s</string>
    <string name="notification_error_message_network_config_invalid_format">Invalid network configuration in network.conf: %1$s</string>
    <string name="notification_error_message_could_not_bind_iface">Could not bind network interface. Is another VPN running?</string>
</resources>