<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="4dp"
        tools:targetApi="21">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/profile_settings"
                android:textSize="16sp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/profile_change_nickname"
                    style="@style/OptionItemText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_nickname"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividerColor"/>
            <TextView
                    android:id="@+id/profile_change_status_text"
                    style="@style/OptionItemText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_status_message"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividerColor"/>
            <TextView
                    android:id="@+id/profile_change_status"
                    style="@style/OptionItemText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_status"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
