<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/side_nav_bar_background"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageView android:id="@+id/profilePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile_photo_description"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:src="@mipmap/ic_launcher_round"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_round"/>
        <!-- TODO(robinlinden): This looks stupid here. Move it. -->
        <!-- TODO(robinlinden): Use nice color icons instead of text. -->
        <Spinner android:id="@+id/statusSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintLeft_toRightOf="@+id/profilePhoto"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/name_default"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView android:id="@+id/profileStatusMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_message_default"/>
</LinearLayout>
